--- a/client/app.scss
+++ b/client/app.scss
@@ -1,4 +1,4 @@
-$pmfBlue: #085397;
+$pmfColor: #085397;
 $pmfGreen: #47a216;
 @mixin add-border-radius($radius) {
   -webkit-border-radius: $radius;
@@ -26,8 +26,10 @@ $pmfGreen: #47a216;
 
 html, body {
   @include add-smooth-font(16px, normal);
-  background-color: #aaa;
+  background-color: #ccc;
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 input {
   @include add-smooth-font(16px, normal);
@@ -38,10 +40,10 @@ input {
   height:25px;
   font-size: 14px;
   background-color: #fff;
-  color: $pmfBlue;
-  border: 1px solid $pmfBlue;
+  color: $pmfColor;
+  border: 1px solid $pmfColor;
   &.is-active {
-    background-color: $pmfBlue;
+    background-color: $pmfColor;
     color: #fff;
     border: 1px solid #fff;
   }
@@ -50,8 +52,8 @@ input {
   @include add-smooth-font(16px, normal);
   @include add-border-radius(5px);
   background-color: #fff;
-  color: $pmfBlue;
-  border: 1px solid $pmfBlue;
+  color: $pmfColor;
+  border: 1px solid $pmfColor;
   padding: 5px 15px;
   text-align: center;
   text-decoration: none;
@@ -59,7 +61,7 @@ input {
   font-size: 14px;
   cursor: pointer;
   &.is-active {
-    background-color: $pmfBlue;
+    background-color: $pmfColor;
     color: #fff;
     border: 1px solid #fff;
   }
