--- a/client/components/app-header/app-header.scss
+++ b/client/components/app-header/app-header.scss
@@ -14,9 +14,10 @@
 
 .app-header-container {
   color: #fff;
-  width: 1050px;
+  max-width: 1080px;
+  min-width: 1000px;
   margin: 0 auto;
-  padding: 10px 20px;
+  padding: 10px 0;
   overflow: hidden;
 
   .container-left {
